<resources>
    <string name="app_name">lab1</string>
    <string name="distance_converter_button">Button</string>
    <string name="weight_converter_button">weight</string>
    <string name="currency_converter_button">Currency</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="point">.</string>
    <string name="zero">0</string>
    <string name="clear">C</string>
    <string name="convert_button">||</string>
    <string name="Save">Save</string>
    <string name="title_activity_choice">ChoiceActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="distance">distance</string>
    <string name="weight">weight</string>
    <string name="currency">currency</string>
    <string name="title_activity_convert">ConvertActivity</string>
    <string name="exchange_button">↑↓</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>