<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KeyBoardFragment">


    <Button
        android:id="@+id/point_button"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/point"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="3dp" />

    <Button
        android:id="@+id/seven_button"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@+id/point_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="3dp" />

    <Button
        android:id="@+id/one_button"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/four_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="3dp" />

    <Button
        android:id="@+id/four_button"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/seven_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="3dp" />

    <Button
        android:id="@+id/two_button"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@+id/five_button"
        app:layout_constraintStart_toEndOf="@+id/one_button" />

    <Button
        android:id="@+id/five_button"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@+id/eight_button"
        app:layout_constraintStart_toEndOf="@+id/four_button" />

    <Button
        android:id="@+id/eight_button"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@+id/zero_button"
        app:layout_constraintStart_toEndOf="@+id/seven_button" />

    <Button
        android:id="@+id/zero_button"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/point_button" />

    <Button
        android:id="@+id/three_button"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@+id/six_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/two_button"
        android:layout_marginRight="3dp" />

    <Button
        android:id="@+id/six_button"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@+id/nine_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/five_button"
        android:layout_marginRight="3dp" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/zero_button"
        android:layout_marginRight="3dp" />

    <Button
        android:id="@+id/nine_button"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@+id/clear_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/eight_button"
        android:layout_marginRight="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>