<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayFragment">

    <EditText
        android:id="@+id/output_edit"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"

        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toEndOf="@+id/output_spinner" />

    <EditText
        android:id="@+id/input_edit"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/convert_button"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toEndOf="@+id/input_spinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.968" />

    <Button
        android:id="@+id/convert_button"
        android:layout_width="75dp"
        android:layout_height="38dp"
        android:layout_marginBottom="28dp"
        android:text="@string/convert_button"
        app:layout_constraintBottom_toTopOf="@+id/output_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/input_spinner"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="96dp"
        app:layout_constraintBottom_toTopOf="@+id/output_spinner"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="4dp" />

    <Spinner
        android:id="@+id/output_spinner"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="4dp" />

    <Button
        android:id="@+id/save_input_button"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginBottom="96dp"
        android:background="#DC8C17"
        android:text="@string/Save"
        app:layout_constraintBottom_toTopOf="@+id/save_output_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.679"
        app:layout_constraintStart_toEndOf="@+id/input_edit" />

    <Button
        android:id="@+id/save_output_button"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="#DC8C17"
        android:text="@string/Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.679"
        app:layout_constraintStart_toEndOf="@+id/output_edit" />

    <Button
        android:id="@+id/exchange_button"
        android:layout_width="75dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:background="#DC8C17"
        android:text="@string/exchange_button"
        app:layout_constraintBottom_toTopOf="@+id/output_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/convert_button"
        android:layout_marginLeft="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>